--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -7,7 +7,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: hsl(213, 80%, 65%);
+  --ifm-color-primary: hsl(213, 80%, 70%);
   --ifm-color-primary-dark: hsl(213, 85%, 60%);
   --ifm-color-primary-darker: hsl(213, 90%, 50%);
   --ifm-color-primary-darkest: hsl(213, 95%, 40%);
@@ -22,6 +22,13 @@
   display: block;
   margin: 0 calc(-1 * var(--ifm-pre-padding));
   padding: 0 var(--ifm-pre-padding);
+}
+
+.card__image img {
+  height: 300px;
+  width: 100%;
+  padding: 30px;
+  object-fit: contain;
 }
 
 html[data-theme="dark"] .docusaurus-highlight-code-line {
